<resources>
    <string name="app_name">LifeLine</string>

    <string name="verify">Verify</string>

    // use in fragment_registration.xml file
    <string name="register">Register</string>
    <string name="regis_text">Enter your details</string>
    <string name="reg_check_text"><![CDATA[I accept the <Lifeline> Terms of Services and Privacy policy]]></string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="demo_email">shadman4work@gmail.com</string>
    <string name="demo_number">+8801100000000</string>
    <string name="demo_number_withoutPrefix">01100000000</string>

    <string name="otp_veri_number_text">An authentication code has been sent to</string>
    <string name="code_resend">Code sent. Please wait some time!</string>
    <string name="otp_verification">OTP Verification</string>

    <string name="nid_scan">NID Scan</string>
    <string name="front_side_of_nid">Front Side of NID</string>
    <string name="back_side_of_nid">Back Side of NID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="demo_address">Dhaka, Dhanmondi 15, Road 8/A Hazi Afsar Uddin Road jhd</string>
    <string name="demo_date">03 July 2001</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="demo_mother_name">Mrs. Shapla</string>
    <string name="mother_name">Mother Name</string>
    <string name="demo_father_name">Md. Jalal Uddin</string>
    <string name="father_name">Father Name</string>
    <string name="demo_name">Shadman Sakib</string>
    <string name="applicants_name">Applicants Name</string>
    <string name="demo_nid">12345678910257894</string>
    <string name="nid_number">NID Number</string>
    <string name="current">Current</string>
    <string name="are_you_in_trouble">Are you in trouble?</string>
    <string name="press_the_button_for_emergency_service">Press the button for emergency service</string>
    <string name="emergency_number">999</string>
    <string name="need_another_help">Need another help?</string>
    <string name="need_medical_help">Need Medical Help</string>
    <string name="need_fire_service">Need Fire Service</string>
    <string name="profile">Profile</string>
    <string name="aid">Aid</string>
    <string name="contacts">Contacts</string>


    <string name="emergency_numbers_from_contacts">Set your 5 emergency numbers from contacts</string>
    <string name="emergency_send">Your emergency is send Successfully</string>
    <string name="medical_emergency_send">Your medical emergency is send to your nearest hospital</string>
    <string name="fire_emergency_send">Your fire emergency is send to your nearest fire service</string>
    <string name="long_text_location_dialog">Your location will be used to send your current location to the emergencies.</string>
    <string name="add">Add</string>
    <string name="your_emergency_contacts">Your Emergency Contacts (0/5)</string>
    <string name="your_phone_contacts">Your phone Contacts</string>
    <string name="add_your_first_contact">Add your first contact</string>
    <string name="loading">loading...</string>
    <string name="back_side_of_nid_text">Back Side of NID</string>
</resources>