<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/ten_dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/forty_dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name">

        <ImageView
            android:id="@+id/photoView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/vector" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/add"
        app:cornerRadius="5dp"
        android:textAllCaps="false"
        app:backgroundTint="@color/button_add_color"
        app:layout_constraintBottom_toBottomOf="@+id/number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/ten_dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:text="@string/demo_name"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/ten_dp"
        android:text="@string/demo_number"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/name" />
</androidx.constraintlayout.widget.ConstraintLayout>