<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.NIDScan">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/backButton"
        android:layout_width="@dimen/forty_dp"
        android:layout_height="@dimen/forty_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginStart="-12dp"
        android:backgroundTint="@color/transparent"
        android:clickable="true"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/forty_dp"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/ten_dp"
            android:src="@drawable/back" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/forty_dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/forty_dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/nid_scan"
        android:textColor="@color/black_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/front_side_of_nid"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:textColor="@color/black_text"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_side_of_nid"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black_text"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/frontPage" />

    <ImageView
        android:id="@+id/frontPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/camera" />

    <ImageView
        android:id="@+id/backPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/camera" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextPage"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:fontFamily="@font/poppins"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/app_main_color"
        app:cornerRadius="@dimen/ten_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/backPage" />
</androidx.constraintlayout.widget.ConstraintLayout>