<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Registration">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins"
        android:text="@string/register"
        android:textColor="@color/black_text"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regis_text"
        android:textSize="20sp"
        android:textColor="@color/black_text"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="Email"
        android:textSize="14sp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputOutlinedStyle"
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="shadman4work@gmail.com"
        app:hintTextColor="@color/app_main_color"
        app:boxCornerRadiusBottomEnd="@dimen/ten_dp"
        app:boxCornerRadiusBottomStart="@dimen/ten_dp"
        app:boxCornerRadiusTopEnd="@dimen/ten_dp"
        app:boxCornerRadiusTopStart="@dimen/ten_dp"
        app:boxStrokeColor="@color/app_main_color"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="+8801100000000"
        app:hintTextColor="@color/app_main_color"
        app:boxCornerRadiusBottomEnd="@dimen/ten_dp"
        app:boxCornerRadiusBottomStart="@dimen/ten_dp"
        app:boxCornerRadiusTopEnd="@dimen/ten_dp"
        app:boxCornerRadiusTopStart="@dimen/ten_dp"
        app:boxStrokeColor="@color/app_main_color"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="number"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="Number"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:minHeight="25dp"
        android:minWidth="25dp"
        android:buttonTint="@color/app_main_color"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reg_check_text"
        android:textSize="15sp"
        android:lineSpacingExtra="4dp"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:textAllCaps="false"
        app:backgroundTint="@color/app_main_color"
        app:cornerRadius="10dp"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>