<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragment.OTP_verificationFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="-12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/transparent"
            android:clickable="true"
            app:cardCornerRadius="40dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/back" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="40dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="40dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/otp_verification"
            android:textColor="@color/black_text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backButton" />

        <TextView
            android:id="@+id/verification_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal"
            android:text="@string/otp_veri_number_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <LinearLayout
            android:id="@+id/codeLinear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/forty_dp"
            android:layout_marginHorizontal="@dimen/thirty_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verification_number">

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"

                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/app_main_color"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/code1Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:inputType="number|numberSigned"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:layout_marginHorizontal="5dp"
                app:boxStrokeColor="@color/app_main_color"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/code2Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:inputType="number|numberSigned"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/app_main_color"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/code3Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:inputType="number"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:layout_marginHorizontal="5dp"
                app:boxStrokeColor="@color/app_main_color"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/code4Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:inputType="number"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/app_main_color"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/code5Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:inputType="number"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:layout_marginStart="5dp"
                app:boxStrokeColor="@color/app_main_color"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/code6Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:inputType="number"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/verifyButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:backgroundTint="@color/app_main_color"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/codeLinear" />

        <TextView
            android:id="@+id/verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal"
            android:text="@string/code_resend"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/verifyButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>